# libseccomp-rs

./: .codecov.yml  .codespellrc  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/actions/setup/: action.yaml
.github/workflows/: build-test.yaml
libseccomp/: Cargo.toml  MAINTAINERS  build.rs
libseccomp-sys/: Cargo.toml  README.md  build.rs  versions.rs
libseccomp-sys/src/: lib.rs  libseccomp_bindings.rs
libseccomp/src/: action.rs  api.rs  arch.rs  arg_compare.rs  compare_op.rs  error.rs  filter_attr.rs  filter_context.rs  functions.rs  lib.rs  notify.rs  syscall.rs  version.rs
libseccomp/src/syscall/: aarch64.rs  arm.rs  loongarch64.rs  m68k.rs  mips.rs  mips64.rs  powerpc.rs  powerpc64.rs  riscv64.rs  s390x.rs  x86.rs  x86_64.rs
libseccomp/tests/: known_syscall_names.rs  notify.rs  tests.rs
scripts/: install_libseccomp.sh  tool.sh
tool/: Cargo.toml  README.md
tool/src/: main.rs
