[package]
name = "libseccomp-sys"
version = "0.2.1"
authors = ["Manabu Sugimoto <Manabu.Sugimoto@sony.com>"]
license = "MIT OR Apache-2.0"
description = "Raw FFI Bindings for the libseccomp Library"
repository = "https://github.com/libseccomp-rs/libseccomp-rs"
categories = ["seccomp", "api-bindings"]
edition = "2018"
readme = "README.md"
