[package]
name = "libseccomp"
version = "0.2.0"
authors = ["Manabu Sugimoto <Manabu.Sugimoto@sony.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Language Bindings for the libseccomp Library"
repository = "https://github.com/libseccomp-rs/libseccomp-rs"
keywords = ["bindings", "seccomp", "linux", "containers", "security"]
categories = ["os", "api-bindings"]
edition = "2018"
readme = "../README.md"

[dependencies]
libc = "0.2"
libseccomp-sys = { version = "0.2.0", path = "../libseccomp-sys" }

[build-dependencies]
pkg-config = "0.3.19"
