[package]
name = "tool"
version = "0.1.0"
authors = ["Manabu Sugimoto <Manabu.Sugimoto@sony.com>"]
license = "MIT OR Apache-2.0"
description = "Generate low-level unsafe API automatically by bindgen"
homepage = "https://github.com/ManaSugi/libseccomp-rs"
repository = "https://github.com/ManaSugi/libseccomp-rs"
edition = "2018"
readme = "README.md"
publish = false

[dependencies]
bindgen = "0.53.1"
